Update bg image to relative url

--- a/source/css/app.css
+++ b/source/css/app.css
@@ -6242,7 +6242,7 @@ body.initialised #landscapeNotice {
   padding-top: calc(300vw * .7112);
   -webkit-transition: .75s;
   transition: .75s;
-  background-image: url("/images/full-picture.png");
+  background-image: url("../images/full-picture.png");
   background-size: contain;
   background-position: 0 0;
   background-repeat: no-repeat; }
