--- a/source/css/components/buttons.css
+++ b/source/css/components/buttons.css
@@ -1,6 +1,5 @@
 .btn {
-  padding: 5px 20px;
-  min-width: 200px; }
+  padding: 5px 20px; }
   .btn.btn-primary {
     background-color: black;
     color: white; }
